# arcv

./: .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml
arcv/: __init__.py  animator.py  easing.py  geometry.py  hud_context.py  scene.py  theme.py
arcv/audio/: __init__.py  bleeps.py  load.py  player.py  synth.py
arcv/capture/: __init__.py  camera.py
arcv/components/: __init__.py  base.py
arcv/overlay/: __init__.py  adapters.py  anim.py  batch.py  draw.py  flat.py  fonts.py  hud_kit.py  renderer.py
arcv/passes/: __init__.py  base.py  bloom.py  camera.py  composite.py  hud.py
arcv/resources/: .gitkeep
arcv/shaders/: __init__.py  bg_dots.frag  bg_gridlines.frag  bg_movinglines.frag  bg_puffs.frag  bloom_blur.frag  bloom_bright.frag  camera.frag  composite.frag  edgetrace.frag  frame_corners.frag  frame_kranox.frag  (+17 more)
examples/: _cyber_cues.py  _demo_scene.py  _hud_adapters.py  anime_boot.py  anime_boot_layout.py  anime_gallery.py  anime_gallery_layout.py  compare.py  cyberpunk_layout.py  gallery.py  hud_cyberpunk_anim.py  hud_cyberpunk_compare.py  minimal_glfw.py  opencv_baseline.py  preview_static.py  robot_hud.py  robot_hud_layout.py  warning_hud.py  warning_hud_layout.py
tests/: test_adapters.py  test_anim_draw_smoke.py  test_animator.py  test_anime_boot_smoke.py  test_anime_gallery_smoke.py  test_audio.py  test_detectors.py  test_easing.py  test_flat_overlay.py  test_fonts.py  test_hud_kit.py  test_overlay_anim.py  test_path.py  test_player.py  test_shaders_smoke.py  test_split_text.py  test_stagger.py  test_theme.py  test_timeline.py
(+32 files in other folders)
